# binary-cookies-reader

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  gen_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: build-and-publish.yml  test.yml
api/: index.html
cli/: index.html
docs/: api.md  cli.md  index.md
search/: search_index.json
src/binary_cookies_parser/: __init__.py  __main__.py  _deserialize.py  _serialize.py  models.py  parser.py  serialize.py
src/binary_cookies_reader/: models.py  reader.py
src/binarycookies/: __init__.py  __main__.py  _deserialize.py  _serialize.py  models.py  parser.py
tests/: test_cli.py  test_cookie_reader.py  test_cookies_parser.py  test_deserialize.py  test_serialize.py  tests_cli.py
