[tool.poetry]
name = "binary-cookies-parser"
version = "1.1.0"
description = "Parses binary cookies from a given .binarycookies file"
authors = ["Daniel Tom <daniel.tom@xebia.com>"]
readme = "README.md"
packages = [{include = "binary_cookies_parser", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = ">=0.12.3,<0.16.0"
pydantic = "^2.8.2"
pytest = "^8.2.2"

[tool.poetry.scripts]
bcparser = "binary_cookies_parser.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = ">=0.5.1,<0.8.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# https://beta.ruff.rs/docs/rules/
# https://beta.ruff.rs/docs/settings/
lint.ignore = [
    "FBT003",
    "ANN101",
    "DTZ007",
    "TRY003",
    "A003",    # shadow built-in types
    "ANN002",  # type annotation for **kwargs
    "ANN003",  # type annotation for *args
    "ANN102",  # Missing type annotation for `cls` in classmethod
    "D101",    # docstring in public classes
    "D102",    # docstring in public methods
    "D103",    # docstring in public functions
    "DTZ",     # timezone information in datetimes
    "RUF012",  # causes failures in pydantic models
    "PLR0911", # for some reason can't ignore this on func definition
    "ISC001",
    "COM812"
]
lint.extend-select = [
    "I",
    "N",
    "ASYNC",
    "ANN",
    "BLE",
    "FBT",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "T20",
    "D101",
    "D102",
    "D103",
    "D419",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID252",
    "ARG",
    "ERA001",
    "G010",
    "PGH005",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF101",
    "PERF102",
    "RUF",
]
line-length = 120
target-version = "py310"
exclude = ["deploy", ".venv"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",
    "ARG001",
    "D101",
    "D102",
    "D103",
    "D419",
    "DTZ005",
    "DTZ011",
    "PLR2004",
    "SLF001",
    "PLR0913",
    "PGH005",
]

[tool.ruff.lint.pylint]
max-args = 7

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true